# calibration

./: .gitattributes  .gitignore  .rumdl.toml  AGENTS.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: validate-skills.yml
.traces/: index.md
.traces/retros/: 20260701-calibration-global-retro.md  20260723-orchestration-route-convergence-retro.md
codex/: AGENTS.md.template
docs/: README.md
docs/decisions/: 2026-07-01-calibration-follow-up-batches.md  2026-07-01-calibration-rename-and-skill-architecture.md  2026-07-01-document-types-retrospect-and-evaluation.md  2026-07-03-writing-docstrings-skill-design.md  2026-07-20-agent-contribution-and-task-isolation.md  2026-07-20-agent-harness-and-evaluation-closeout.md  2026-07-20-agent-harness-and-evaluation-ownership.md  2026-07-20-skill-optimization-evaluation-closeout.md  2026-07-21-harness-successor-evaluation-closeout.md  2026-07-21-repository-delivery-feedback-loop.md  2026-07-21-repository-engineering-capability-adoption-closeout.md  2026-07-22-symphony-readiness-and-bounded-canary-closeout.md  2026-07-23-ao-review-continuation-adoption.md  2026-07-24-minimal-native-agent-pr-delivery.md
docs/implementation-plan/: 20260720-v1.0-agent-harness-collaboration-implementation-plan.md  20260720-v1.1-agent-harness-evaluation-implementation-plan.md  20260721-v1.2-harness-successor-cleanup-implementation-plan.md  (+5 more)
global-defaults/: SKILL.md
global-defaults/docs/: README.md
persona/: README.md  USER_PERSONA.md
scripts/: __init__.py  adopt_ao_repository.py  validate_markdown_links.py  validate_skills.py
tests/: test_adopt_ao_repository.py  test_install.py  test_repository_adoption_contract.py  test_validate_markdown_links.py  test_validate_skills.py
(+63 files in other folders)
